--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview --base=./"
+    "preview": "vite preview --base=/spacewars/"
   },
   "keywords": [
     "game",
